[package]
name = "web-pm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
actix-web = "4"
derive_more = "*"
dotenvy = "0.15"
sea-orm = { version = "0.10.6", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }